--- a/PracticaFinal/index.html
+++ b/PracticaFinal/index.html
@@ -99,25 +99,31 @@
               <h2>Our Virtual Headset Shine with Unique Features!</h2>
             </div>
             <div class="row mt-5">
-              <div class="col">
+              <div class="col-lg-5">
                 <div class="row">
+                  <p class="estblava"></p>
                   <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p>
                 </div>
                 <div class="row">
+                  <p class="estblava"></p>
                   <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p>
                 </div>
                 <div class="row">
+                  <p class="estblava"></p>
                   <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p>
                 </div>
               </div>
-              <div class="col">
+              <div class="col-lg-5">
                 <div class="row">
+                  <p class="estblava"></p>
                   <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p>
                 </div>
                 <div class="row">
+                  <p class="estblava"></p>
                   <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p>
                 </div>
                 <div class="row">
+                  <p class="estblava"></p>
                   <p class="p1">High-resolution OLED or LCD screens: Provide sharp and clear visuals.</p>
                 </div>
               </div>
@@ -140,6 +146,18 @@
                 <span class="p1">Read my blog</span>
                 <span class="flecha"></span>
               </button>  
+            </div>
+            <div class="row">
+              <div class="fotos">
+                <img src="./assets/p1.png" class="imgg">
+                <img src="./assets/p2.png" class="imgg">
+                <img src="./assets/p3.png" class="imgg">
+                <img src="./assets/p4.png" class="imgg">
+                <img src="./assets/p5.png" class="imgg">
+                <div class="text">
+                  <p class="p1">+258K Views</p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col">
@@ -188,7 +206,105 @@
           </div>
         </div>
       </div>
+      
+      <div class="contingut5 container-fluid">
+        <div class="d-flex flex-column align-items-center">
+            <h2 class="faq">F.A.Q.</h2>
+            <div class="accordion mt-5" id="acordeo1">
+              <div class="accordion-item">
+                  <h2 class="accordion-header" id="heading1">
+                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
+                          <p class="p1 m-0">What are the different types of virtual headsets available?</p>
+                      </button>
+                  </h2>
+                  <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#acordeo1">
+                      <div class="accordion-body">
+                          <p class="p2">Relleno</p>
+                      </div>
+                  </div>
+              </div>
+          </div>          
+            <div class="accordion" id="acordeo2">
+              <div class="accordion-item mt-3">
+                <h2 class="accordion-header" id="heading2">
+                  <button class="accordion-button d-flex align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="true" aria-controls="collapse2">
+                    <p class="p1">How does a virtual headset work? </p>
+                  </button>
+                </h2>
+                <div id="collapse2" class="accordion-collapse collapse show" aria-labelledby="heading2" data-bs-parent="#acordeo2">
+                  <div class="accordion-body">
+                    <p class="p3">Virtual headsets are equipped with various sensors to track the user's movements. These sensors can include accelerometers. gyroscopes. and sometimes external cameras or base stations. They constantly monitor the position and orientation of the headset and sometimes the user's hand controllers.</p>
+                    <p class="p3">The headset has one or two high-resolution displays. one for each eye. positioned in front of the user's eyes.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="heading2">
+                  <button class="accordion-button d-flex align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="true" aria-controls="collapse2">
+                    <p class="p1">How does a virtual headset work? </p>
+                  </button>
+                </h2>
+                <div id="collapse2" class="accordion-collapse collapse show" aria-labelledby="heading2" data-bs-parent="#acordeo2">
+                  <div class="accordion-body">
+                    <p class="p3">Virtual headsets are equipped with various sensors to track the user's movements. These sensors can include accelerometers. gyroscopes. and sometimes external cameras or base stations. They constantly monitor the position and orientation of the headset and sometimes the user's hand controllers. </p>
+                    <p class="p3">The headset has one or two high-resolution displays. one for each eye. positioned in front of the user's eyes. These displays show stereoscopic 3D images. creating a sense of depth and immersion. Between the displays and the user's eyes. help focus the images and adjust them for the user's field of view.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="accordion mt-3" id="acordeo3">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="heading3">
+                  <button class="accordion-button d-flex align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="true" aria-controls="collapse3">
+                    <p class="p1">Do I need a powerful computer to use a virtual headset?</p>
+                  </button>
+                </h2>
+                <div id="collapse3" class="accordion-collapse collapse show" aria-labelledby="heading3" data-bs-parent="#acordeo3">
+                  <div class="accordion-body">
+                    <p class="p3">Relleno</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="accordion mt-3" id="acordeo4">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="heading4">
+                  <button class="accordion-button d-flex align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="true" aria-controls="collapse4">
+                    <p class="p1">What are the main applications of virtual headsets? </p>
+                  </button>
+                </h2>
+                <div id="collapse4" class="accordion-collapse collapse show" aria-labelledby="heading4" data-bs-parent="#acordeo4">
+                  <div class="accordion-body">
+                    <p class="p3">Relleno</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+      </div>
+      
     </div>
+
+    <footer>
+      <div class="col">
+        <div class="row">
+          <img src="./assets/logo.png" alt="Logo" style="max-height: 40px;" class="logo"> 
+        </div>
+        <div class="row">
+          <div class="emotes">
+            <div class="em1"></div>
+            <div class="em2"></div>
+            <div class="em3"></div>
+            <div class="em4"></div>
+          </div>
+        </div>
+        <div class="row">
+          <p class="p1">(+994) 199-28-786</p>
+        </div>
+      </div>
+      <div class="col">
+
+      </div>
+    </footer>
   </body>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
