--- a/Practica3/index.html
+++ b/Practica3/index.html
@@ -166,7 +166,7 @@
                     <img src="./imatges/emoticonos/tarjeta.png" class="d-block w-foto mx-auto">
                   </div>
                 </div>
-                <!-- <div class="row mt-3">
+                <div class="row mt-3">
                   <div class="col">
                     <h1 class="text-center">Low-cost Flights</h1>
                   </div>
@@ -187,7 +187,7 @@
                   <div class="col d-flex justify-content-center">
                     <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, Proin non odio sed eros tristeque</p>
                   </div>
-                </div> -->
+                </div>
               </div>
 
               <div id="recomendacions" class="container my-5">
