--- a/PracticaFinal/index.html
+++ b/PracticaFinal/index.html
@@ -16,7 +16,7 @@
         <header>
           <nav class="navbar navbar-expand-lg navbar-light m-auto">
             <div class="container-fluid">
-                <div class="navegacio d-sm-none">
+                <div class="navegacio">
                     <p class="navbar textNav p2">Home</p>
                     <p class="navbar textNav p2">Catalog</p>
                     <p class="navbar textNav p2">Contact</p>
